force-app/main/default/objects/Training__c/fields/DMS_Name__c.field-meta.xml
<CustomField>
    <fullName>DMS_Name__c</fullName>
    <label>DMS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>