force-app/main/default/objects/Training__c/fields/DMS_Program__c.field-meta.xml
<CustomField>
    <fullName>DMS_Program__c</fullName>
    <label>DMS Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>